syntax = "proto3"; // Use the latest proto syntax

option csharp_namespace = "ElearnGrpc";

service TeacherService {
  rpc getTeacherByUsername(TeacherUsername) returns (TeacherModel);
}

message TeacherModel {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  string password =5;
  string image = 6;
  string role = 7;
  int32 securityLevel = 8;
}

message TeacherUsername {
  string username = 1;
}